agrego comentario en body

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+  <!-- prueba para push -->
+  
   <header>
     <img src="./imagen/logo.png" class="logo" alt="Logo" />
     <nav>
