--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <!--  -->
+  <!-- esta es la prueba de la rama -->
   <header>
     <img src="./imagen/logo.png" class="logo" alt="Logo" />
     <nav>
