titulo degrade, animacion y carrusel de imagenes

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
   <!-- prueba para push -->
   <!-- prueba para rama1b -->
+
   <header>
     <img src="./imagen/logo.png" class="logo" alt="Logo" />
     <nav>
@@ -30,10 +31,26 @@
   </header>
 
   <!-- empieza el -->
-  <main style="margin-left: 30px;">
-    <h1 id="titulo">Pianista / Compositor / Productor</h1>
 
-    <h2>SOBRE MI</h2>
+
+  <div class="containertext">
+    <span class="leftt"> Pianista </span>
+    <div class="stack" style="--stacks: 3;">
+      <span style="--index: 0;">Compositor </span>
+      <span style="--index: 1;">Compositor </span>
+      <span style="--index: 2;">Compositor </span>
+    </div>
+    <span class="rightt">Productor</span>
+  </div>
+
+  <!-- 
+  <div>
+    <h2 class="rotate">Writing</h2>
+    <h2>Mode</h2>
+  </div>-->
+
+  <main style="margin-left: 30px;">
+    <h2>SOBRE MI </h2>
     <div class="containerFlex">
       <section class="sectionOne">
         <p>
@@ -46,41 +63,62 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias sapiente aliquid, corrupti nobis
           consectetur magni tenetur mollitia minima necessitatibus distinctio provident temporibus totam maxime sed
           ducimus soluta hic dolor harum?
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptas ullam nemo itaque fugit. Obcaecati doloremque voluptates exercitationem corrupti? Praesentium aliquid laborum veniam sed deserunt aperiam nemo numquam earum maiores? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi eveniet eius ad veritatis repudiandae tenetur, porro iure a perferendis sunt, at optio harum excepturi reprehenderit, enim id iusto deserunt. Aspernatur.
-          Quidem quia facere labore, veniam vero hic, fugit sunt illum commodi ducimus itaque totam ex? Fuga laboriosam facere placeat quia nam animi adipisci sapiente itaque, autem voluptas? Dolore, incidunt provident!
-          Numquam et cumque nam. Ad est eveniet, animi blanditiis dolorum eos laudantium pariatur corporis et eligendi minus beatae enim voluptatibus voluptatem nisi sed ipsa tempora officia aut, dolore, quam quibusdam.
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi nulla quos veritatis. Quo, esse, nisi neque voluptate omnis iure quam iusto amet ratione aperiam assumenda, deserunt delectus. Omnis, fugiat aliquid!
-          Dolorum aliquam, eius itaque eligendi sequi aut possimus nemo iste voluptate nostrum, rerum laborum soluta aliquid repudiandae voluptas quasi. Velit illo optio nemo soluta fugiat recusandae dolore voluptas, in iste.
-          Tempore, dolor eius. Id laboriosam voluptatibus eius possimus, odit corporis reiciendis alias quibusdam ea velit sit modi inventore libero? Expedita eaque architecto autem ducimus deserunt nemo illo, quo quidem optio?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptas ullam nemo itaque fugit. Obcaecati
+          doloremque voluptates exercitationem corrupti? Praesentium aliquid laborum veniam sed deserunt aperiam nemo
+          numquam earum maiores? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi eveniet eius ad
+          veritatis repudiandae tenetur, porro iure a perferendis sunt, at optio harum excepturi reprehenderit, enim id
+          iusto deserunt. Aspernatur.
+          Quidem quia facere labore, veniam vero hic, fugit sunt illum commodi ducimus itaque totam ex? Fuga laboriosam
+          facere placeat quia nam animi adipisci sapiente itaque, autem voluptas? Dolore, incidunt provident!
+          Numquam et cumque nam. Ad est eveniet, animi blanditiis dolorum eos laudantium pariatur corporis et eligendi
+          minus beatae enim voluptatibus voluptatem nisi sed ipsa tempora officia aut, dolore, quam quibusdam.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi nulla quos veritatis. Quo, esse, nisi neque
+          voluptate omnis iure quam iusto amet ratione aperiam assumenda, deserunt delectus. Omnis, fugiat aliquid!
+          Dolorum aliquam, eius itaque eligendi sequi aut possimus nemo iste voluptate nostrum, rerum laborum soluta
+          aliquid repudiandae voluptas quasi. Velit illo optio nemo soluta fugiat recusandae dolore voluptas, in iste.
+          Tempore, dolor eius. Id laboriosam voluptatibus eius possimus, odit corporis reiciendis alias quibusdam ea
+          velit sit modi inventore libero? Expedita eaque architecto autem ducimus deserunt nemo illo, quo quidem optio?
 
         </p>
       </section>
-      <section class="sectionTwo">
-        <!-- seccion con imagenes varias que estarian al costado (faltan agregar mas) -->
-        <div class="img-item">
-          <img src="./imagen/bandoneon.jpg" class=fotos alt="bandoneon" />
-        </div>
-        <div class="img-item">
-          <img src="./imagen/olas.png" class=fotos alt="todos" />
-        </div>
-        <div class="img-item">
-          <img src="./imagen/olas.png" class=fotos alt="todos" />
-        </div>
-        <div class="img-item">
-          <img src="./imagen/olas.png" class=fotos alt="todos" />
-        </div>
-        <div class="img-item">
-          <img src="./imagen/olas.png" class=fotos alt="todos" />
-        </div>
-        <div class="img-item">
-          <img src="./imagen/olas.png" class=fotos alt="todos" />
-        </div>
-      </section>
+
+      <div class="pic-ctn">
+        <img src="./imagen/bandoneon.jpg" alt="" class="pic">
+        <img src="./imagen/1653510021604.jpg" alt="" class="pic">
+        <img src="./imagen/1653510021578.jpg" alt="" class="pic">
+        <img src="./imagen/1653510021587.jpg" alt="" class="pic">
+        <img src="./imagen/1653510021587.jpg" alt="" class="pic">
+      </div>
+
+
+    </div>
+      <!--        
+<section class="sectionTwo">
+  <div class="img-item">
+    <img src="./imagen/bandoneon.jpg" class=fotos alt="bandoneon" />
+  </div>
+  <div class="img-item">
+    <img src="./imagen/1653510021604.jpg" class=fotos alt="teclas" width="270px" height="180px" />
+  </div>
+  <div class="img-item">
+    <img src="./imagen/1653510021578.jpg" class=fotos alt="pp" width="270px" height="180px" />
+  </div>
+  <div class="img-item">
+    <img src="./imagen/1653510021587.jpg" class=fotos alt="banda" width="270px" height="180px" />
+  </div>
+  <div class="img-item">
+    <img src="./imagen/olas.png" class=fotos alt="todos" />
+  </div>
+  <div class="img-item">
+    <img src="./imagen/olas.png" class=fotos alt="todos" />
+  </div>
+</section>
+     -->
 
 
   </main>
 
-  
+
   <section class="card">
 
     <div class="card-item" id="id-one">
