--- a/contacto.html
+++ b/contacto.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+  
     <link rel="shortcut icon" href="imagen/taomi.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.1.1/css/all.css">
     <script src="https://site-assets.fontawesome.com/releases/v6.1.1/js/all.js" data-auto-add-css="false"
       data-auto-replace-svg="false"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">  
+    <link rel="stylesheet" href="style.css" />
     <title>Ch Silvosa</title>
   </head>
   
@@ -49,35 +51,39 @@
 </div>
 
 
-  <footer class="pie-pagina">
-    <div class="grupo-1">
-      <div class="box">
-        <h2>SOBRE NOSOTROS</h2>
-        <p>Pianist / Composer / Producer
-          Love film scoring and Video-games music</p>
-     
-      </div>
-      <div class="box">
-        <h2>Encontrame en las siguientes redes</h2>
-        <div class="red-social">
-     
-          <a href="https://open.spotify.com/artist/6AdvNzqud06qGUmaH0Nqzq?si=j8q-fSW8Ry2nDTo0gDhchg" class="spoti"  target="_blank"><i class="fa-brands fa-spotify"></i></a>
-          <a href="https://soundcloud.com/silvosa-taomi/tracks" class="sound" target="_blank"><i class="fa-brands fa-soundcloud"></i></a>
-          <a href="https://www.linkedin.com/in/christian-silvosa-82b8811b0/" class="linke"target="_blank"><i class="fa-brands fa-linkedin"></i>
-          <a href="https://www.youtube.com/channel/UClUO_R4nzjdSfMq7pHcQ6kw" class="yout" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-          <a href="https://www.facebook.com/christian.silvosa/" class="face" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-          <a href="https://www.instagram.com/ta.o.mi/" class="inst" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+<footer class="pie-pagina">
+  <div class="grupo-1">
+    <div class="box">
+      <h2>SOBRE NOSOTROS</h2>
+      <p>Pianist / Composer / Producer
+        Love film scoring and Video-games music</p>
 
+    </div>
+    <div class="box">
+      <h2>Encontrame en las siguientes redes</h2>
+      <div class="red-social">
 
-        </div>
+        <a href="https://open.spotify.com/artist/6AdvNzqud06qGUmaH0Nqzq?si=j8q-fSW8Ry2nDTo0gDhchg" class="spoti"
+          target="_blank"><i class="fa-brands fa-spotify"></i></a>
+        <a href="https://soundcloud.com/silvosa-taomi/tracks" class="sound" target="_blank"><i
+            class="fa-brands fa-soundcloud"></i></a>
+        <a href="https://www.linkedin.com/in/christian-silvosa-82b8811b0/" class="linke" target="_blank"><i
+            class="fa-brands fa-linkedin"></i>
+          <a href="https://www.youtube.com/channel/UClUO_R4nzjdSfMq7pHcQ6kw" class="yout" target="_blank"><i
+              class="fa-brands fa-youtube"></i></a>
+          <a href="https://www.facebook.com/christian.silvosa/" class="face" target="_blank"><i
+              class="fa-brands fa-facebook"></i></a>
+          <a href="https://www.instagram.com/ta.o.mi/" class="inst" target="_blank"><i
+              class="fa-brands fa-instagram"></i></a>
       </div>
     </div>
-    <div class="grupo-2">
-      <small>&copy; 2021 <b>TiTi Code </b> - Todos los Derechos Reservados.</small>
-    </div>
+  </div>
+  <div class="grupo-2">
+    <small>&copy; 2022 <b>TiTi Code </b> - Todos los Derechos Reservados.</small>
+  </div>
 
-  </footer>
-
+</footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.j" ></script>  
 </body>
 
 </html>
