--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+
   <link rel="shortcut icon" href="imagen/taomi.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.1.1/css/all.css">
   <script src="https://site-assets.fontawesome.com/releases/v6.1.1/js/all.js" data-auto-add-css="false"
     data-auto-replace-svg="false"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">  
+  <link rel="stylesheet" href="style.css">
   <title>Ch Silvosa</title>
 </head>
 
 <body>
-  <!-- prueba para push -->
-  <!-- prueba para rama1b -->
 
   <header>
     <img src="./imagen/logo.png" class="logo" alt="Logo" />
@@ -33,7 +33,7 @@
   <!-- empieza el -->
 
 
-  <div class="containertext">
+  <div class="containertext1">
     <span class="leftt"> Pianista </span>
     <div class="stack" style="--stacks: 3;">
       <span style="--index: 0;">Compositor </span>
@@ -43,79 +43,46 @@
     <span class="rightt">Productor</span>
   </div>
 
-  <!-- 
-  <div>
-    <h2 class="rotate">Writing</h2>
-    <h2>Mode</h2>
-  </div>-->
 
   <main style="margin-left: 30px;">
     <h2>SOBRE MI </h2>
     <div class="containerFlex">
       <section class="sectionOne">
-        <p>
+   
+
+          <figure class="text-center">
+            <blockquote class="blockquote">
+              <p>Music gives a soul to the universe, wings to the mind, flight to the imagination and life to everything.</p>
+            </blockquote>
+            <figcaption class="blockquote-footer">
+              Someone famous in <cite title="Source Title"> music live</cite>
+            </figcaption>
+          </figure> 
+
+          <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, ipsa! Numquam placeat voluptates vel?
           Qui ullam dolore veritatis porro ex provident nostrum, dolores dolorum voluptates fuga commodi incidunt
           deserunt culpa!
           Voluptatum, mollitia quaerat, repudiandae blanditiis ipsa error, eligendi numquam provident tenetur
           voluptate sint esse aut porro dolor voluptates iure? Accusamus tempora autem voluptate odit ab culpa dolor
           iure minus consequuntur?
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias sapiente aliquid, corrupti nobis
-          consectetur magni tenetur mollitia minima necessitatibus distinctio provident temporibus totam maxime sed
-          ducimus soluta hic dolor harum?
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptas ullam nemo itaque fugit. Obcaecati
-          doloremque voluptates exercitationem corrupti? Praesentium aliquid laborum veniam sed deserunt aperiam nemo
-          numquam earum maiores? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi eveniet eius ad
-          veritatis repudiandae tenetur, porro iure a perferendis sunt, at optio harum excepturi reprehenderit, enim id
-          iusto deserunt. Aspernatur.
-          Quidem quia facere labore, veniam vero hic, fugit sunt illum commodi ducimus itaque totam ex? Fuga laboriosam
-          facere placeat quia nam animi adipisci sapiente itaque, autem voluptas? Dolore, incidunt provident!
-          Numquam et cumque nam. Ad est eveniet, animi blanditiis dolorum eos laudantium pariatur corporis et eligendi
-          minus beatae enim voluptatibus voluptatem nisi sed ipsa tempora officia aut, dolore, quam quibusdam.
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi nulla quos veritatis. Quo, esse, nisi neque
-          voluptate omnis iure quam iusto amet ratione aperiam assumenda, deserunt delectus. Omnis, fugiat aliquid!
-          Dolorum aliquam, eius itaque eligendi sequi aut possimus nemo iste voluptate nostrum, rerum laborum soluta
-          aliquid repudiandae voluptas quasi. Velit illo optio nemo soluta fugiat recusandae dolore voluptas, in iste.
-          Tempore, dolor eius. Id laboriosam voluptatibus eius possimus, odit corporis reiciendis alias quibusdam ea
-          velit sit modi inventore libero? Expedita eaque architecto autem ducimus deserunt nemo illo, quo quidem optio?
+  
 
         </p>
       </section>
 
+
       <div class="pic-ctn">
-        <img src="./imagen/bandoneon.jpg" alt="" class="pic">
-        <img src="./imagen/1653510021604.jpg" alt="" class="pic">
-        <img src="./imagen/1653510021578.jpg" alt="" class="pic">
-        <img src="./imagen/1653510021587.jpg" alt="" class="pic">
-        <img src="./imagen/1653510021587.jpg" alt="" class="pic">
+        <img src="./imagen/bandoneon.jpg" alt="bandoneon" class="pic">
+        <img src="./imagen/1653510021604.jpg" alt="teclas" class="pic">
+        <img src="./imagen/1653510021578.jpg" alt="fotos" class="pic">
+        <img src="./imagen/1653510021587.jpg" alt="banda" class="pic">
+        <img src="./imagen/1653510021587.jpg" alt="todo" class="pic">
       </div>
 
 
     </div>
-      <!--        
-<section class="sectionTwo">
-  <div class="img-item">
-    <img src="./imagen/bandoneon.jpg" class=fotos alt="bandoneon" />
-  </div>
-  <div class="img-item">
-    <img src="./imagen/1653510021604.jpg" class=fotos alt="teclas" width="270px" height="180px" />
-  </div>
-  <div class="img-item">
-    <img src="./imagen/1653510021578.jpg" class=fotos alt="pp" width="270px" height="180px" />
-  </div>
-  <div class="img-item">
-    <img src="./imagen/1653510021587.jpg" class=fotos alt="banda" width="270px" height="180px" />
-  </div>
-  <div class="img-item">
-    <img src="./imagen/olas.png" class=fotos alt="todos" />
-  </div>
-  <div class="img-item">
-    <img src="./imagen/olas.png" class=fotos alt="todos" />
-  </div>
-</section>
-     -->
-
-
+     
   </main>
 
 
@@ -155,9 +122,6 @@
 
   </section>
 
-
-  </section>
-
   <!-- FIN agregado para notas -->
 
   <footer class="pie-pagina">
@@ -188,10 +152,12 @@
       </div>
     </div>
     <div class="grupo-2">
-      <small>&copy; 2021 <b>TiTi Code </b> - Todos los Derechos Reservados.</small>
+      <small>&copy; 2022 <b>TiTi Code </b> - Todos los Derechos Reservados.</small>
     </div>
 
   </footer>
+  
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.j" ></script>  
 </body>
 
 </html>
