--- a/musica.html
+++ b/musica.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +6,6 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <link rel="shortcut icon" href="imagen/taomi.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.1.1/css/all.css">
   <script src="https://site-assets.fontawesome.com/releases/v6.1.1/js/all.js" data-auto-add-css="false"
@@ -17,61 +17,73 @@
 
 <body>
   <header>
-    <img src="./imagen/logo.png" class="logo" alt="Logo" />
-    <nav>
-      <ul id="navegable">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="musica.html">Música</a></li>
-        <li><a href="videos.html">Videos</a></li>
-        <li><a href="musica-no-lineal.html">Música No Lineal</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>
+    <!--Menu hamburguesa Navegable-->
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <a class="navbar-brand">
+            <img src="./imagen/logo.png" alt="" width="200" height="">
+          </a>
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="musica.html">Música</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="videos.html" aria-current="page">Videos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="musica-no-lineal.html">Musica No Lineal</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+        </div>
+      </div>
     </nav>
   </header>
-
-
-
-
   <div class="container text-center">
-    <h3> EP</h3>
-    <p><em> listas de reproduccion!</em></p>
-    <p> sencillos y colaboraciones..</p>
+    <h3> Listas de Reproduccion</h3>
+    <p><em> sencillos y colaboraciones</em></p>
     <br>
     <div class="row">
-      <div class="col-sm-4">
-        <p><strong> Piano Instrumental</strong></p><br>
-        <iframe class="ratio ratio-4x3"src="https://open.spotify.com/embed/artist/6AdvNzqud06qGUmaH0Nqzq?utm_source=generator" frameBorder="0"
-          allowfullscreen="spot" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+      <div class="col-sm-3  lista">
+        <p><strong> Blood moon eclipse</strong></p><br>
+        <iframe class="ratio ratio-4x3"src="https://open.spotify.com/embed/album/38bfP5swQlVORNDa0ayrQq?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
         </iframe>
-      </div>
-      <div class="col-sm-4">
+        </div>
+      <div class="col-sm-3 lista">
         <p><strong> Las Olas</strong></p><br>
-        <iframe class="ratio ratio-4x3"src="https://open.spotify.com/embed/artist/6AdvNzqud06qGUmaH0Nqzq?utm_source=generator" frameBorder="0"
-          allowfullscreen="spoti" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+        <iframe class="ratio ratio-4x3"src="https://open.spotify.com/embed/artist/1JNA517y3Whi3eBD3tfkdI?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
         </iframe>
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-3 lista">
         <p><strong> Colab</strong></p><br>
-        <iframe class="ratio ratio-4x3" src="https://open.spotify.com/embed/artist/6AdvNzqud06qGUmaH0Nqzq?utm_source=generator" frameBorder="0"
-          allowfullscreen="spotif" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+        <iframe class="ratio ratio-4x3" src="https://open.spotify.com/embed/playlist/5XHTwe9wMIzt3VnbUQr1Lo?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
       </div>
-
+      <div class="col-sm-3 lista">
+        <p><strong> Las Olas</strong></p><br>
+        <iframe class="ratio ratio-4x3"src="https://open.spotify.com/embed/artist/1JNA517y3Whi3eBD3tfkdI?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+        </iframe>
+      </div>
     </div>
   </div>
-
-
   <footer class="pie-pagina">
     <div class="grupo-1">
       <div class="box">
         <h2>SOBRE NOSOTROS</h2>
         <p>Pianist / Composer / Producer
           Love film scoring and Video-games music</p>
-
       </div>
       <div class="box">
         <h2>Encontrame en las siguientes redes</h2>
         <div class="red-social">
-
           <a href="https://open.spotify.com/artist/6AdvNzqud06qGUmaH0Nqzq?si=j8q-fSW8Ry2nDTo0gDhchg" class="spoti"
             target="_blank"><i class="fa-brands fa-spotify"></i></a>
           <a href="https://soundcloud.com/silvosa-taomi/tracks" class="sound" target="_blank"><i
@@ -90,10 +102,8 @@
     <div class="grupo-2">
       <small>&copy; 2022 <b>TiTi Code </b> - Todos los Derechos Reservados.</small>
     </div>
-
   </footer>
-
+ <!-- link bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.j"></script>
 </body>
-
 </html>
