--- a/videos.html
+++ b/videos.html
@@ -1,135 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-    <link rel="shortcut icon" href="imagen/taomi.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.1.1/css/all.css">
-    <script src="https://site-assets.fontawesome.com/releases/v6.1.1/js/all.js" data-auto-add-css="false"
-      data-auto-replace-svg="false"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">  
-    <link rel="stylesheet" href="style.css" />
-    <title>Ch Silvosa</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="imagen/taomi.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.1.1/css/all.css">
+  <script src="https://site-assets.fontawesome.com/releases/v6.1.1/js/all.js" data-auto-add-css="false"
+    data-auto-replace-svg="false"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css" />
+  <title>Ch Silvosa</title>
+</head>
 <body>
   <header>
-    <img src="./imagen/logo.png" class="logo" alt="Logo" />
-    <nav>
-      <ul id="navegable">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="musica.html">Música</a></li>
-        <li><a href="videos.html">Videos</a></li>
-        <li><a href="musica-no-lineal.html">Música No Lineal</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>
+    <!--Menu hamburguesa Navegable-->
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <a class="navbar-brand">
+            <img src="./imagen/logo.png" alt="" width="200" height="">
+          </a>
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="musica.html">Música</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link  active" href="videos.html" aria-current="page">Videos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="musica-no-lineal.html">Musica No Lineal</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+        </div>
+      </div>
     </nav>
   </header>
-
-
-<div>
-  <H1 class="titulovideo"> Galeria de videos</H1>
-  <!-- aca voy a subir varios videos pero pongo uno ahora -->
-  <div class="grid-videos">
-    <div class="galeria">
-      <div clas="videos">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/y7eA9zLQZic" title="YouTube video player"
-          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+<!--comienza GALERIA-->
+  <div class="container-fluid">
+    <div class="row justify-content-around">
+      <h2 class="titulovideo col-12">Video Juegos</h2>
+      <div class="card col-5 col-md-3 m-md-2 p-0 video video">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/E-8s1ryGRoI?start=1"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
+        <div class="card-body d-none d-md-block">
+          <h5 class="card-title">8 bits Music</h5>
+        </div>
       </div>
-      <div class="pie">
-        <p>Full ep Electric</p>
-      </div>
-    </div>
-
-    <div class="galeria">
-      <div clas="videos">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/VeDlZ2Oqj9s" title="YouTube video player"
-          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      <div class="card col-5 col-md-3 m-2 p-0 video video">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/bkJ8nYYe87M" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
+        <div class="card-body d-none d-md-block">
+          <h5 class="card-title">Himno Nacional Argentino</h5>
+        </div>
       </div>
-      <div class="pie">
-        <p>Composicion para Publicidades</p>
-      </div>
-    </div>
-
-    <div class="galeria">
-      <div clas="videos">
-        <iframe width="100%" height="auto" src="https://www.youtube.com/embed/VeDlZ2Oqj9s" title="YouTube video player"
-          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      <div class="card col-5 col-md-3 m-2 p-0 video video">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/2jjxZF2TsPs" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
-      </div>
-      <div class="pie">
-        <p>Composicion para Publicidades</p>
-      </div>
-    </div>
-    <div class="galeria">
-      <div clas="videos">
-        <iframe width="100%" height="auto" src="https://www.youtube.com/embed/VeDlZ2Oqj9s" title="YouTube video player"
-          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </div>
-      <div class="pie">
-        <p>Composicion para Publicidades</p>
-      </div>
-    </div>
-    <div class="galeria">
-      <div clas="videos">
-        <iframe width="100%" height="auto" src="https://www.youtube.com/embed/VeDlZ2Oqj9s" title="YouTube video player"
-          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </div>
-      <div class="pie">
-        <p>Composicion para Publicidades</p>
-      </div>
-    </div>
-    <div class="galeria">
-      <div clas="videos">
-        <iframe width="100%" height="auto" src="https://www.youtube.com/embed/VeDlZ2Oqj9s" title="YouTube video player"
-          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </div>
-      <div class="pie">
-        <p>Composicion para Publicidades</p>
-      </div>
-    </div>
-    <div class="galeria">
-      <div clas="videos">
-        <iframe width="100%" height="auto" src="https://www.youtube.com/embed/VeDlZ2Oqj9s" title="YouTube video player"
-          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </div>
-      <div class="pie">
-        <p>Composicion para Publicidades</p>
-      </div>
-    </div>
-    <div class="galeria">
-      <div clas="videos">
-        <iframe width="100%" height="auto" src="https://www.youtube.com/embed/VeDlZ2Oqj9s" title="YouTube video player"
-          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </div>
-      <div class="pie">
-        <p>Composicion para Publicidades</p>
+        <div class="card-body d-none d-md-block">
+          <h5 class="card-title">Analisis Woodtick Theme</h5>
+        </div>
       </div>
     </div>
   </div>
-</div>
-
+<!-- segunda galeria-->
+  <div class="container-fluid">
+    <div class="row justify-content-around">
+      <h2 class="titulovideo col-12"> Publicidades</h2>
+      <div class="card col-5 col-md-3 m-md-2 p-0 video">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/TxP7LTSUKV8" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        <div class="card-body d-none d-md-block">
+          <h5 class="card-title">The ocean is my church</h5>
+        </div>
+      </div>
+      <div class="card col-5 col-md-3 m-2 p-0 video video">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Tfja9aRhoRA" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        <div class="card-body d-none d-md-block">
+          <h5 class="card-title"> Dia del padre Movistar</h5>
+        </div>
+      </div>
+      <div class="card col-5 col-md-3 m-2 p-0 video video">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/2sTjrfKaMDY" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        <div class="card-body d-none d-md-block">
+          <h5 class="card-title"> Dia de la madre</h5>
+        </div>
+      </div>
+      <div class="card col-5 col-md-3 m-md-2 p-0 video video">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/789jwWXPcT4" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        <div class="card-body d-none d-md-block">
+          <h5 class="card-title"> Honda</h5>
+        </div>
+      </div>
+      <div class="card col-5 col-md-3 m-2 p-0 video video">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/o4UN_RujZ9o" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        <div class="card-body d-none d-md-block">
+          <h5 class="card-title"> Uber</h5>
+        </div>
+      </div>
+      <div class="card col-5 col-md-3 m-2 p-0 video video">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/i5wF04miZow" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        <div class="card-body d-none d-md-block">
+          <h5 class="card-title"> Olay Funeral</h5>
+        </div>
+      </div>
+      <div class="card col-5 col-md-3 m-md-2 p-0 video video">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/-qXFQNbNOj8" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        <div class="card-body d-none d-md-block">
+          <h5 class="card-title">Kfc</h5>
+        </div>
+      </div>
+      <div class="card col-5 col-md-3 m-2 p-0 video video">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/s4rs60dyuj0" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        <div class="card-body d-none d-md-block">
+          <h5 class="card-title"> Mc Donalds</h5>
+        </div>
+      </div>
+      <div class="card col-5 col-md-3 m-2 p-0 video video">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/p5z5RApA0co" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        <div class="card-body d-none d-md-block">
+          <h5 class="card-title"> Kfc street</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--tercera galeria-->
+  <div class="container-fluid">
+    <div class="row justify-content-around">
+      <h2 class="titulovideo col-12"> En vivo</h2>
+      <div class="card col-5 col-md-3 m-md-2 p-0 video">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/CYgJVlXAvFQ"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        <div class="card-body d-none d-md-block">
+          <h5 class="card-title"> Studio version</h5>
+        </div>
+      </div>
+      <div class="card col-5 col-md-3 m-2 p-0 video">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/yHkxRlmkbXc" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        <div class="card-body d-none d-md-block">
+          <h5 class="card-title">Live at mutek Barcelona</h5>
+        </div>
+      </div>
+      <div class="card col-5 col-md-3 m-2 p-0 video">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/bYCUY4hw_R8" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        <div class="card-body d-none d-md-block">
+          <h5 class="card-title"> Show Manu Possi</h5>
+        </div>
+      </div>
+    </div>
+  </div>
   <footer class="pie-pagina">
     <div class="grupo-1">
       <div class="box">
         <h2>SOBRE NOSOTROS</h2>
         <p>Pianist / Composer / Producer
           Love film scoring and Video-games music</p>
-
       </div>
       <div class="box">
         <h2>Encontrame en las siguientes redes</h2>
         <div class="red-social">
-
           <a href="https://open.spotify.com/artist/6AdvNzqud06qGUmaH0Nqzq?si=j8q-fSW8Ry2nDTo0gDhchg" class="spoti"
             target="_blank"><i class="fa-brands fa-spotify"></i></a>
           <a href="https://soundcloud.com/silvosa-taomi/tracks" class="sound" target="_blank"><i
@@ -142,15 +220,16 @@
                 class="fa-brands fa-facebook"></i></a>
             <a href="https://www.instagram.com/ta.o.mi/" class="inst" target="_blank"><i
                 class="fa-brands fa-instagram"></i></a>
-
-
         </div>
       </div>
     </div>
     <div class="grupo-2">
-      <small>&copy; 2021 <b>TiTi Code </b> - Todos los Derechos Reservados.</small>
+      <small>&copy; 2022 <b>TiTi Code </b> - Todos los Derechos Reservados.</small>
     </div>
   </footer>
+  <!-- link bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
 </body>
-
 </html>
