--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://site-assets.fontawesome.com/releases/v6.1.1/js/all.js" data-auto-add-css="false"
         data-auto-replace-svg="false"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Ch Silvosa</title>
 </head>
 
