agregado de sass y seo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
         data-auto-replace-svg="false"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Ch Silvosa</title>
+    <!--Meta  Autor-->
+    <meta name="author" content="Tatiana Pisani">
+    <!-- Meta descripcion-->
+    <meta name="description"
+        content="Productor Musical, Compositor & Profesor de piano. Composición para Videojuegos y Audiovisuales">
+    <!--Meta keywords-->
+    <meta name="keywords"
+        content=" Clases de Piano, Composicion para videojuegos, Clases de Audio, Crear Musica para videojugos, Clases de musica en capital, Componer Canciones, Clases Online">
+    <!-- Meta title-->
+    <title>Christian Silvosa Musico y Productor </title>
 </head>
 
 <body>
@@ -178,4 +187,5 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
