--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner imgCarousel">
                         <div class="carousel-item active" data-bs-interval="2000">
-                            <img src="./imagen/bandoneon.jpg" class="d-block w-100" alt="...">
+                            <img src="./imagen/bandoneon.webp" class="d-block w-100" alt="bandoneon">
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
-                            <img src="./imagen/1653510021604.jpg" class="d-block w-100" alt="...">
+                            <img src="./imagen/1653510021604.webp" class="d-block w-100" alt="show">
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
-                            <img src="./imagen/1653510021578.jpg" class="d-block w-100" alt="...">
+                            <img src="./imagen/1653510021578.webp" class="d-block w-100" alt="orquesta">
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
-                            <img src="./imagen/1653510021587.jpg" class="d-block w-100" alt="...">
+                            <img src="./imagen/1653510021587.webp" class="d-block w-100" alt="piano">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
