--- a/musica-no-lineal.html
+++ b/musica-no-lineal.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,8 +10,18 @@
   <script src="https://site-assets.fontawesome.com/releases/v6.1.1/js/all.js" data-auto-add-css="false"
     data-auto-replace-svg="false"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css"/>
-  <title>Ch Silvosa</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <!--Meta  Autor-->
+  <meta name="author" content="Tatiana Pisani">
+    <!-- Meta title-->
+    <title> Musica No Lineal, Unity y Wwise </title>
+  <!-- Meta descripcion-->
+    <meta name="description" content="Productor Musical, Compositor & Profesor de piano. Composición para Videojuegos y Audiovisuales">
+  <!--Meta keywords-->
+  <meta name="keywords"
+    content="Audio para videojuegos, usar unity, clases de audio utn, composicion, Clases de Piano, Composicion para videojuegos, Clases de Audio, Crear Musica para videojugos, Clases de musica en capital, Componer Canciones, Clases Online">
+
+
 </head>
 
 <body>
@@ -26,7 +35,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <a class="navbar-brand">
-            <img src="./imagen/logo.png" alt="" width="200" height="">
+            <img src="./imagen/logo.png" alt="logo" width="200" height="">
           </a>
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
             <li class="nav-item">
