--- a/contacto.html
+++ b/contacto.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,6 +10,16 @@
     data-auto-replace-svg="false"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
+   <!--Meta  Autor-->
+   <meta name="author" content="Tatiana Pisani">
+   <!-- Meta descripcion-->
+   <meta name="description"
+       content="Productor Musical, Compositor & Profesor de piano. Composición para Videojuegos y Audiovisuales">
+   <!--Meta keywords-->
+   <meta name="keywords"
+       content=" profesor de piano en nuñez, clases de musica online, composicion musical por zoom, clases particulares, produccion digital, Clases de Piano, Composicion para videojuegos, Clases de Audio, Crear Musica para videojugos, Clases de musica en capital, Componer Canciones, Clases Online">
+   <!-- Meta title-->
+   <title> Formulario de contacto  </title>
   <title>Ch Silvosa</title>
 </head>
 
