--- a/musica.html
+++ b/musica.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,8 +10,17 @@
   <script src="https://site-assets.fontawesome.com/releases/v6.1.1/js/all.js" data-auto-add-css="false"
     data-auto-replace-svg="false"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css"/>
-  <title>Ch Silvosa</title>
+  <link rel="stylesheet" href="css/style.css" />
+ <!--Meta  Autor-->
+ <meta name="author" content="Tatiana Pisani">
+ <!-- Meta descripcion-->
+ <meta name="description"
+     content="Productor Musical, Compositor & Profesor de piano. Composición para Videojuegos y Audiovisuales">
+ <!--Meta keywords-->
+ <meta name="keywords"
+     content="las olas music, blood moon eclipse disco, oxygen las olas, christian silvosa colaboraciones musicales, Clases de Piano, Composicion para videojuegos, Clases de Audio, Crear Musica para videojugos, Clases de musica en capital, Componer Canciones, Clases Online">
+ <!-- Meta title-->
+ <title> Listas de reproduccion en spotify </title>
 </head>
 
 <body>
@@ -26,7 +34,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <a class="navbar-brand">
-            <img src="./imagen/logo.png" alt="" width="200" height="">
+            <img src="./imagen/logo.png" alt="logo" width="200" height="">
           </a>
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
             <li class="nav-item">
@@ -55,21 +63,33 @@
     <div class="row">
       <div class="col-sm-3  lista">
         <p><strong> Blood moon eclipse</strong></p><br>
-        <iframe class="ratio ratio-4x3"src="https://open.spotify.com/embed/album/38bfP5swQlVORNDa0ayrQq?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+        <iframe class="ratio ratio-4x3"
+          src="https://open.spotify.com/embed/album/38bfP5swQlVORNDa0ayrQq?utm_source=generator" width="50%"
+          height="380" frameBorder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
         </iframe>
-        </div>
+      </div>
       <div class="col-sm-3 lista">
         <p><strong> Las Olas</strong></p><br>
-        <iframe class="ratio ratio-4x3"src="https://open.spotify.com/embed/artist/1JNA517y3Whi3eBD3tfkdI?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+        <iframe class="ratio ratio-4x3"
+          src="https://open.spotify.com/embed/artist/1JNA517y3Whi3eBD3tfkdI?utm_source=generator" width="50%"
+          height="380" frameBorder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
         </iframe>
       </div>
       <div class="col-sm-3 lista">
         <p><strong> Colab</strong></p><br>
-        <iframe class="ratio ratio-4x3" src="https://open.spotify.com/embed/playlist/5XHTwe9wMIzt3VnbUQr1Lo?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+        <iframe class="ratio ratio-4x3"
+          src="https://open.spotify.com/embed/playlist/5XHTwe9wMIzt3VnbUQr1Lo?utm_source=generator" width="50%"
+          height="380" frameBorder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
       </div>
       <div class="col-sm-3 lista">
         <p><strong> Las Olas</strong></p><br>
-        <iframe class="ratio ratio-4x3"src="https://open.spotify.com/embed/artist/1JNA517y3Whi3eBD3tfkdI?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+        <iframe class="ratio ratio-4x3"
+          src="https://open.spotify.com/embed/artist/1JNA517y3Whi3eBD3tfkdI?utm_source=generator" width="50%"
+          height="380" frameBorder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
         </iframe>
       </div>
     </div>
@@ -103,7 +123,8 @@
       <small>&copy; 2022 <b>TiTi Code </b> - Todos los Derechos Reservados.</small>
     </div>
   </footer>
- <!-- link bootstrap -->
+  <!-- link bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
