--- a/videos.html
+++ b/videos.html
@@ -10,7 +10,17 @@
     data-auto-replace-svg="false"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css"/>
-  <title>Ch Silvosa</title>
+  <!--Meta  Autor-->
+  <meta name="author" content="Tatiana Pisani">
+  <!-- Meta descripcion-->
+  <meta name="description"
+    content="Productor Musical, Compositor & Profesor de piano. Composición para Videojuegos y Audiovisuales">
+  <!--Meta keywords-->
+  <meta name="keywords"
+    content=" musica para cine, composicion para publicidades, audios 8 bits, videos de musica mutek, piano version, Clases de Piano, Composicion para videojuegos, Clases de Audio, Crear Musica para videojugos, Clases de musica en capital, Componer Canciones, Clases Online">
+  <!-- Meta title-->
+  <title> Videos en vivo, y publicidades</title>
+  
 </head>
 <body>
   <header>
@@ -23,7 +33,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <a class="navbar-brand">
-            <img src="./imagen/logo.png" alt="" width="200" height="">
+            <img src="./imagen/logo.png" alt="logo" width="200" height="">
           </a>
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
             <li class="nav-item">
@@ -136,33 +146,7 @@
           <h5 class="card-title"> Olay Funeral</h5>
         </div>
       </div>
-      <div class="card col-5 col-md-3 m-md-2 p-0 video video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/-qXFQNbNOj8" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-        <div class="card-body d-none d-md-block">
-          <h5 class="card-title">Kfc</h5>
-        </div>
-      </div>
-      <div class="card col-5 col-md-3 m-2 p-0 video video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/s4rs60dyuj0" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-        <div class="card-body d-none d-md-block">
-          <h5 class="card-title"> Mc Donalds</h5>
-        </div>
-      </div>
-      <div class="card col-5 col-md-3 m-2 p-0 video video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/p5z5RApA0co" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-        <div class="card-body d-none d-md-block">
-          <h5 class="card-title"> Kfc street</h5>
-        </div>
-      </div>
+
     </div>
   </div>
   <!--tercera galeria-->
