agregado de mixin lista y seo

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <!--Meta keywords-->
     <meta name="keywords"
         content=" Clases de Piano, Composicion para videojuegos, Clases de Audio, Crear Musica para videojugos, Clases de musica en capital, Componer Canciones, Clases Online">
+    <!--Meta Op-->
+    <meta property="og:title" content="Christian Silvosa Musico y Productor">
+    <meta property="og:url" content="https://www.chsilvosa.com">
     <!-- Meta title-->
     <title>Christian Silvosa Musico y Productor </title>
 </head>
@@ -100,13 +103,13 @@
                             <img src="./imagen/bandoneon.webp" class="d-block w-100" alt="bandoneon">
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
-                            <img src="./imagen/1653510021604.webp" class="d-block w-100" alt="show">
+                            <img src="./imagen/teclado.webp" class="d-block w-100" alt="show">
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
-                            <img src="./imagen/1653510021578.webp" class="d-block w-100" alt="orquesta">
+                            <img src="./imagen/artista.webp" class="d-block w-100" alt="orquesta">
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
-                            <img src="./imagen/1653510021587.webp" class="d-block w-100" alt="piano">
+                            <img src="./imagen/sesion.webp" class="d-block w-100" alt="piano">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
